@@ -2407,7 +2407,7 @@ function include_module_install($module, $path) {
  * if they select OK.  The main reason I want to do this is so I can pass the $question through
  * my t() function. (do it when you call this function)
  */
-function fp_get_js_confirm_link($question, $action_if_yes, $link_text, $extra_class = "") {
+function fp_get_js_confirm_link($question, $action_if_yes, $link_text, $extra_class = "", $link_title = "") {
   
   $rtn = "";  
 
@@ -2416,7 +2416,9 @@ function fp_get_js_confirm_link($question, $action_if_yes, $link_text, $extra_cl
   $question = htmlentities($question, ENT_QUOTES);
   $question = str_replace("\n", "\\n", $question);
   
-  $rtn .= "<a href='javascript: if(confirm(\"$question\")) { $action_if_yes;  }' class='$extra_class'>$link_text</a>";
+  $link_title = htmlentities($link_title, ENT_QUOTES);
+  
+  $rtn .= "<a href='javascript: if(confirm(\"$question\")) { $action_if_yes;  }' class='$extra_class' title='$link_title'>$link_text</a>";
 
       
   return $rtn;
