@@ -104,7 +104,7 @@ function advise_display_history() {
   $last_session_id = 0;
   $a_count = 0;
   $c = 0;
-  $is_empty = true;
+  $is_empty = TRUE;
   $first_style = "color: maroon; font-weight:bold;";
   $advising_session_id_array = array();
    
@@ -113,7 +113,7 @@ function advise_display_history() {
             onmouseout='$(this).removeClass(\"selection_highlight\");'
     ";      
   
-  $html = "";
+  
   
 
   $advising_session_groups_array = array();
@@ -121,6 +121,169 @@ function advise_display_history() {
   $session_group_code = $old_session_group_code = "";
 
 
+  
+  // First, find all of the advising session "groups".  That is, advising sessions over multiple
+  // terms which were submitted together.
+  $res = db_query("SELECT * FROM advising_sessions
+                    WHERE student_id = ?
+                    AND is_draft = 0
+                    AND is_empty = 0
+                    AND delete_flag = 0
+                    GROUP BY advising_session_token
+                    ORDER BY `posted` DESC                    
+                     ", $student_id);
+  while($cur = db_fetch_array($res)) {
+    $html = "";
+    $is_empty = FALSE;
+    $advtoken = $cur['advising_session_token'];  
+    $bool_is_empty = FALSE;
+    $faculty_id = $cur['faculty_id'];
+    $dt = date("m/d/Y g:ia",convert_time($cur['posted']));
+    
+    $group_link ="";
+    
+    // If this has more than one session for this token, then show a group_link
+    $sessions_arr = advise_get_advising_sessions_for_advising_token($advtoken);    
+     
+    if ($sessions_arr && count($sessions_arr) > 1) {
+      $turl = fp_url("advise/popup-display-summary", "show_as_group=yes&advising_session_id=" . join(",",$sessions_arr));
+      $on_click = "popupLargeIframeDialog(\"" . $turl . "\",\"" . t("Advising Sessions - @date", array("@date" => $dt)) . "\",\"\");";  
+      $group_link = "<a href='javascript:$on_click' class='advising-summary-group-link'><i class='fa fa-list-ul'></i> " . t("View Combined") . "</a>";    
+    }
+
+
+    $advised_by = "<div class='history-advised-row history-advised-row-$a_count'>
+            <strong>" . t("Advised by") . " " . fp_get_faculty_name($cur2['faculty_id'], FALSE) . "</strong>$group_link
+          </div>";
+
+
+    $html .= "<div class=''>$advised_by</div>";              
+    
+    $a_count++;
+    if ($a_count > 1) {
+      $first_style = "";
+    }
+
+    
+          
+    
+    
+    $res2 = db_query("SELECT * FROM advising_sessions
+                      WHERE advising_session_token = ?
+                      AND is_empty = 0
+                      ORDER BY term_id DESC", array($advtoken));
+    while ($cur2 = db_fetch_array($res2)) {
+            
+    
+         
+      // Are we supposed to "delete" an advising session?  We will double-check the user has all needed permissions if so.
+      if (intval(@$_GET['deladv']) === intval($cur2['advising_session_id'])) {
+        if (user_has_permission('can_advise_students') && user_has_permission('can_delete_own_advising_session_3_months') && $cur2['faculty_id'] == $user->cwid) {
+        
+          $del_range = strtotime("now -3 months");
+          $then = intval($cur2["posted"]);
+          if ($then > $del_range) {
+            db_query("UPDATE advising_sessions 
+                      SET delete_flag = 1
+                      WHERE advising_session_id = ?", array($cur2['advising_session_id']));
+            fp_add_message(t("Advising session has been successfully deleted."));
+            continue;  // skip this record.    
+          }
+          
+        }
+      } // if we are trying to delete          
+      
+      
+      
+  
+    
+      $turl = fp_url("advise/popup-display-summary", "advising_session_id={$cur2['advising_session_id']}");
+  
+      $advising_session_id_array[] = $cur2['advising_session_id'];
+      $term = get_term_description($cur2['term_id'], FALSE, $school_id);
+  
+      $on_click = "popupLargeIframeDialog(\"" . $turl . "\",\"" . t("Advising Session @term - @date", array("@term" => $term, "@date" => $dt)) . "\",\"\");";  
+                
+      
+      
+      // Should we show the "delete" link?    
+      
+      if (user_has_permission('can_advise_students') && user_has_permission('can_delete_own_advising_session_3_months') && $cur2['faculty_id'] == $user->cwid) {
+        $delete_html = "";    
+        $del_range = strtotime("now -3 months");
+        $then = intval($cur["posted"]);
+        if ($then > $del_range) {
+          
+          $safe_term = $term;
+          $safe_term = str_replace("'", "", $safe_term);
+          $safe_term = str_replace('"', "", $safe_term);
+          $safe_term = str_replace(';', "", $safe_term);
+          $safe_term = str_replace('\\', "", $safe_term);
+          
+          $confirm_link = fp_get_js_confirm_link(t("Are you sure you wish to delete the advising session from @dt for @term?  \\n\\nThis action cannot be undone.", array("@dt" => $dt, "@term" => $safe_term)),
+                              "window.location=\"" . fp_url("history", "current_student_id=$current_student_id&deladv=" . $cur2['advising_session_id']) . "\";", "<i class='fa fa-remove'></i>", "action-link-remove", t("Delete?")); 
+          $delete_html .= "<div class='delete-adv-wrapper'>
+                      $confirm_link
+                      <!-- <a href='javascript:deleteAdvisingSession(\"{$cur['advising_session_id']}\",\"$dt\");'>" . t("Delete this advising session?") . "</a> -->
+                    </div>";
+          
+          
+        }
+        
+        
+      } // user had permission to delete        
+      
+      
+      $html .= "<div $on_mouse_over style='cursor: pointer; $first_style' class='advhist-row' onClick='$on_click'>
+                  <div class='advhist-term' style='display: inline-block; padding-left:20px; width:165px;'>$term</div>
+                  <div class='advhist-datetime' style='display: inline-block;'>$dt</div>                
+                </div>
+                $delete_html";
+      
+      
+      
+      // If this is more than X number, let's hide the rest in a collapsible fieldset.
+      if ($c < 5) {
+        $render_left["advising_history_$c"] = array(
+          "value" => $html,
+          "weight" => $c,
+        );
+      }
+      else {
+        // Let's place in a collapsible fieldset!
+        if (!isset($render_left["advising_history_fs"])) {
+          $render_left["advising_history_fs"] = array(
+            "type" => "cfieldset",
+            "label" => t("Show complete advising history"),
+            "start_closed" => TRUE,
+            "elements" => array(),
+            "weight" => $c,          
+          );
+        }
+        $render_left["advising_history_fs"]["elements"][] = array("advising_history_$c" => array(
+          "value" => $html,
+        ));
+          
+        
+      }
+          
+      $html = "";
+          
+      $c++;        
+      
+      
+      
+      
+      
+      
+    } // while cur2
+    
+    
+  } // while cur group by advising session token 
+  
+  
+  
+  /*
   
   // First, find all of the advising session "groups".  That is, advising sessions over multiple
   // terms which were submitted together.
@@ -230,7 +393,8 @@ function advise_display_history() {
 
     }
     $is_empty = false;
-
+    */
+    /*
     if ($a_count > 1) {
       $first_style = "";
     }
@@ -249,14 +413,10 @@ function advise_display_history() {
               
     
     
-    $html .= "<div $on_mouse_over style='cursor: pointer; $first_style' onClick='$on_click'>
-                <div class=' ' style='display: inline-block; padding-left:20px; width:165px;'>$term</div>
-                <div class=' ' style='display: inline-block;'>$dt</div>
-              </div>";
     // Should we show the "delete" link?    
     
     if (user_has_permission('can_advise_students') && user_has_permission('can_delete_own_advising_session_3_months') && $cur['faculty_id'] == $user->cwid) {
-    
+      $delete_html = "";    
       $del_range = strtotime("now -3 months");
       $then = intval($cur["posted"]);
       if ($then > $del_range) {
@@ -268,18 +428,28 @@ function advise_display_history() {
         $safe_term = str_replace('\\', "", $safe_term);
         
         $confirm_link = fp_get_js_confirm_link(t("Are you sure you wish to delete the advising session from @dt for @term?  \\n\\nThis action cannot be undone.", array("@dt" => $dt, "@term" => $safe_term)),
-                            "window.location=\"" . fp_url("history", "current_student_id=$current_student_id&deladv=" . $cur['advising_session_id']) . "\";", t("Delete this advising session?")); 
+                            "window.location=\"" . fp_url("history", "current_student_id=$current_student_id&deladv=" . $cur['advising_session_id']) . "\";", "<i class='fa fa-remove'></i>", "action-link-remove", t("Delete?")); 
         
-                
-        $html .= "<div class='delete-adv-wrapper'>
+        
+        $delete_html .= "<div class='delete-adv-wrapper'>
                     $confirm_link
                     <!-- <a href='javascript:deleteAdvisingSession(\"{$cur['advising_session_id']}\",\"$dt\");'>" . t("Delete this advising session?") . "</a> -->
                   </div>";
+        
+        
       }
       
       
-    }
+    } // user had permission to delete
 
+    $html .= "<div $on_mouse_over style='cursor: pointer; $first_style' class='advhist-row' onClick='$on_click'>
+                <div class='advhist-term' style='display: inline-block; padding-left:20px; width:165px;'>$term</div>
+                <div class='advhist-datetime' style='display: inline-block;'>$dt</div>                
+              </div>
+              $delete_html";
+    
+    
+    
     // If this is more than X number, let's hide the rest in a collapsible fieldset.
     if ($c < 5) {
       $render_left["advising_history_$c"] = array(
@@ -307,7 +477,7 @@ function advise_display_history() {
         
         
     $c++;
-  }
+  }*/
   //$rtn .= "</table>";
 
   if ($is_empty == true) {
