@@ -136,17 +136,30 @@
   color: #777;
 }
 
-
 .history-summary-divider {
   margin-top: 40px;
   margin-bottom: 40px;
   border-bottom: 2px dashed #333;
 }
 
+
+
+
+___advising_history{}
+
+
 .delete-adv-wrapper {
-  font-size: 0.8em;
-  margin-left: 190px;
+  display: inline-block;    
 }
+
+div.advhist-row {
+  display: inline-block;
+  width: calc(100% - 100px);
+}
+
+
+
+
 
 
 
