@@ -785,7 +785,7 @@ function student_files_content_alter(&$render, $content_id) {
     $files_array = student_files_get_files_for_student($student_id);
     
     $html .= "<div class='student-files-file-list'>
-                <table border='0' width='100%' class='tenpt' cellpadding='0' cellspacing='0'>";
+                <table border='0' width='100%' class='' cellpadding='0' cellspacing='0'>";
     
     $is_empty = TRUE;
     foreach ($files_array as $cur) {
@@ -816,7 +816,7 @@ function student_files_content_alter(&$render, $content_id) {
       $del_link = "";
       if (student_files_user_may_delete_student_file($student_id, $fid)) {
         $del_link = "<span class='student-files-delete'>" . fp_get_js_confirm_link("Are you sure you wish to delete this file? This action cannot be undone.", 
-                            "window.location=\"" . fp_url("student-files/handle-delete/$student_id/$fid") . "\"", "&nbsp;") . "</span>";
+                            "window.location=\"" . fp_url("student-files/handle-delete/$student_id/$fid") . "\"", "<i class='fa fa-remove'></i>", "action-link-remove", t("Delete?")) . "</span>";
       }
             
       $html .= "<tr class='$row_class'>
